fixed spacing

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -875,6 +875,7 @@ footer ul {
     p {
         font-size: 2rem;
         max-width: 46em;
+        margin-bottom: 2rem;
         // max-width: 90ch;
     }
 }
